public interface IElectronico {
  void conectar();

  void ajustarVolumen(int nivel);
}