public interface IMusical {
  void tocar();

  void afinar();
}